<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MyOrdersFragment">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbMyOrders"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMyOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_orders_text"
        android:textSize="@dimen/toolbar_title_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tbMyOrders"
        app:layout_constraintEnd_toEndOf="@id/tbMyOrders"
        app:layout_constraintStart_toStartOf="@id/tbMyOrders"
        app:layout_constraintTop_toTopOf="@id/tbMyOrders" />

    <TextView
        android:id="@+id/tvMyOrders2"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="27dp"
        android:text="@string/my_orders_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivNonLogin" />

    <ImageView
        android:id="@+id/ivNonLogin"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/ic_go_nonlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbMyOrders" />

    <TextView
        android:id="@+id/tvWarning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/my_orders_sign_up_text"
        android:textAlignment="center"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMyOrders2" />

    <Button
        android:id="@+id/tvLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="130dp"
        android:backgroundTint="@color/toolbar_color"
        android:text="@string/login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWarning" />

</androidx.constraintlayout.widget.ConstraintLayout>